# LocalAI

./: README.md  pyproject.toml  run.sh
localai/: __init__.py  __main__.py  cli.py  hardware.py  models.py  ollama.py  recommender.py
localai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
