[project]
name = "localai"
version = "1.0.0"
description = "Detect your hardware and find the best Ollama model to run locally"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
]

[project.scripts]
localai = "localai.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
